# ada-2024-project-5pack

./: .gitignore  .pre-commit-config.yaml  README.md  WEBSITE_SETUP.md  analysis.ipynb  data_exploration.ipynb  graph_analysis.ipynb  pyproject.toml  results.ipynb  setup_website_linux.sh  setup_website_macos.sh  setup_website_windows.ps1  shortest_paths.ipynb
.github/workflows/: jekyll-gh-pages.yml
data/: README.md  download_linux_or_macos.sh
data_story/: _config.yml  index.md
data_story/_layouts/: default.html
data_story/_sass/: main.scss
data_story/_sass/components/: player.scss
data_story/assets/css/: styles.scss
data_story/assets/js/: player.js
src/data/: graph.py  loading.py
src/models/: semantic_analyzer.py
src/scripts/: generate_pairs_category.py  generate_plaintext_analysis.py
src/scripts/analysis/: generate_hub_strategy_analysis.py  generate_path_analysis.py
src/scripts/data_story/: generate_plots.py
src/scripts/data_story/plots/: backtrack_distribution.py  combinations.py  communities.py  game_stats_intro.py  hubs_distribution.py  hubs_impact.py  link_strat.py  link_strat_and_comparison.py  rank_vs_length.py  regression_analysis.py  score_vs_length.py  semantic_path_example.py  semantic_similarity_matrix.py  semantic_strategy.py
src/utils/: __init__.py  constants.py  data_utils.py  general_utils.py  generality.py  graph.py  hub_focused_strategy.py  link_strategy.py  llm.py  metrics.py  network_analyzer.py  path_analyzer.py  semantic_analyzer.py  semantic_strategy.py  statistical_tests.py  statistics.py  visualizations.py
src/utils/analyzers/: human_behavior_analyzer.py  network_analyzer.py  path_analyzer.py  rank_length_analyzer.py  score_vs_length_analyzer.py  semantic_analyzer.py
src/utils/data/: __init__.py  graph.py
src/utils/strategies/: backtrack_strategy.py  comparison.py  hub_focused_strategy.py  link_strategy.py  semantic_strategy.py
utils/: loading.py
