[tool.poetry]
name = "ada-2024-project-5pack"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
lxml = "^5.3.0"
cssselect = "^1.2.0"
networkx = "^3.4.2"
tqdm = "^4.66.6"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"
pyvis = "^0.3.2"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
ignore = ["E722"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
