[tool.poetry]
name = "ada-2024-project-5pack"
description="ADA 2024 5pack"
authors=[]
readme = "README.md"
version="0.0.1"
package-mode=true
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
lxml = "^5.3.0"
cssselect = "^1.2.0"
networkx = "^3.4.2"
tqdm = "^4.66.6"
numpy = "<2"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"
pyvis = "^0.3.2"
scipy = "^1.14.1"
transformers = "^4.46.2"
torch = "^2.5.1"
scikit-learn = "^1.5.2"
bs4 = "^0.0.2"
chardet = "^5.2.0"
seaborn = "^0.13.2"
leidenalg = "^0.10.2"
igraph = "^0.11.8"
plotly = "^5.24.1"
nbformat = "^5.10.4"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
ignore = ["E731", "E722"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
